--- a/doc/paper_draft/sections/1-introduction.tex
+++ b/doc/paper_draft/sections/1-introduction.tex
@@ -57,7 +57,7 @@ We propose a 360° optical flow method based on gnomonic projection to overcome 
 
 \item
 %global warping method to align the image, large span motion in 360 images.
-We integrate a global warping method to align large motions \CR{rotations?} between 360° images.
+We integrate a global warping method to align large rotations between 360° images.
 
 \item
 %Propose a face (tangent image) optical flow blending method that can reduce dramatically the discontinuity at the image boundary;
