--- a/doc/paper_draft/sections/3-approach.tex
+++ b/doc/paper_draft/sections/3-approach.tex
@@ -138,7 +138,7 @@ To increase the FoV of tangent images and improve the continuity of optical flow
 %		Image cubemap and icosahedron projection with padding.
 		Tangent image projection and padding.
 		(a)~Gnomonic projection maps points on the surface of a sphere from the sphere's centre to a point on the tangent plane.
-		(c)~We add padding to the tangent images to extend their area and ensure overlap between tangent images.
+		(b)~We add padding to the tangent images to extend their area and ensure overlap between tangent images.
 %		\TODO{Image show the cubemap and icosahedron projection result and sampling points \& padding area with padding size.}
 	}
 \end{figure}
