--- a/doc/paper_draft/bmvc_review.tex
+++ b/doc/paper_draft/bmvc_review.tex
@@ -86,7 +86,7 @@ This is especially relevant when estimating 360° optical flow, as the distortio
 % method
 %In this paper, we propose a tangent image base 360° image optical flow method, which leverages gnomonic projection converting ERP image to perspective images, uniformly sample ERP image by projection on regular cubemap and icosahedron vertices and hire global rotation warping to capture long-span motion.
 In this paper, we propose a 360° optical flow method based on tangent images.
-Our method leverages gnomonic projection to locally convert ERP images to perspective images, and uniformly samples the ERP image by projection to a cubemap and regular icosahedron vertices, to incrementally refine the estimated 360° flow fields even in the presence of large rotations.
+Our method leverages gnomonic projection to locally convert ERP images to perspective images, and uniformly samples the ERP image by projection to a cubemap and regular icosahedron faces, to incrementally refine the estimated 360° flow fields even in the presence of large rotations.
 %
 Our experiments demonstrate the benefits of our proposed method both quantitatively and qualitatively.
 %
