--- a/doc/paper_draft/sections/3-approach.tex
+++ b/doc/paper_draft/sections/3-approach.tex
@@ -208,15 +208,26 @@ We then use the cubemap optical flow to fine-tune the alignment using $\hat{R}$.
 
 %\textbf{Panoramic Optical Flow Global Rotation Warping.}
 \textbf{Global Rotation Optical Flow Warping.}
-To restore the $\mathcal{F}$ from the icosahedron optical flow $\tilde{\mathcal{F}}$, the end point of $\tilde{\mathcal{F}}$ should trace to the pixel position in $I_{t+1}$.
+%To restore the $\mathcal{F}$ from the icosahedron optical flow $\tilde{\mathcal{F}}$, the end point of $\tilde{\mathcal{F}}$ should trace to the pixel position in $I_{t+1}$.
+To recover the final 360° optical flow field $\mathcal{F}$ from the icosahedron optical flow $\tilde{\mathcal{F}}$, the end point of $\tilde{\mathcal{F}}$ needs to align with the pixel position in the input image $I_{t+1}$.
 % 
-When estimating the optical flow only the target image $I_{t+1}$ is warped, so just need to rotate the end point of $\tilde{\mathcal{F}}_t$, i.e $\tilde{\mathcal{F}}^{EP}_t$. 
+When estimating the optical flow, only the target image $I_{t+1}$ is rotated, so we now need to rotate the end point of $\tilde{\mathcal{F}}_t$, i.e $\tilde{\mathcal{F}}^{EP}_t$ in the opposite direction.
 %
-To rotate the panoramic image, first transform it to 3D space with $\mathcal{P}$, and back to equirectangular image with $\mathcal{P}^{-1}$.
+To rotate an ERP pixel, we first convert it to Cartesian 3D coordinates using $\mathcal{P}$, rotate it about the centre of the sphere, and then convert it back to ERP using $\mathcal{P}^{-1}$.
 %
+Applied to optical flow, this yields:
+%
+\CR{Should the `$- \mathbf{x}$' be outside the parenthesis?}
 \begin{equation}\label{equ:approach:globalwarp}
 %\begin{split}
-	\mathcal{F}_{(i,j)} = \mathcal{F}^{EP}_{(i,j)} - (i,j)  
-				= \mathcal{P}^{-1} \left( \hat{R}^{-1} \cdot \bar{R}^{-1} \cdot \mathcal{P}(\tilde{\mathcal{F}}^{EP}_{(i,j)}) - (i,j)\right)
+%	\mathcal{F}_{(i,j)} = \mathcal{F}^{EP}_{(i,j)} - (i,j)  
+%				= \mathcal{P}^{-1} \left( \hat{R}^{-1} \cdot \bar{R}^{-1} \cdot \mathcal{P}(\tilde{\mathcal{F}}^{EP}_{(i,j)}) - (i,j)\right)
+	\mathcal{F}(\mathbf{x})
+	= \mathcal{F}^\text{EP}(\mathbf{x}) - \mathbf{x}
+	= \mathcal{P}^{-1} \left( \hat{R}^\top \cdot \bar{R}^\top \cdot \mathcal{P}(\tilde{\mathcal{F}}^\text{EP}(\mathbf{x})) - \mathbf{x}\right)
+	\text{.}
 %\end{split}
 \end{equation}
+
+
+\clearpage
