--- a/doc/paper_draft/sections/3-approach.tex
+++ b/doc/paper_draft/sections/3-approach.tex
@@ -114,7 +114,7 @@ Our approach in principle supports any perspective optical flow method, and resu
 %
 %% tangent image generation
 Like \citet{ZhaoYZLBT2020}, we use the gnomonic projection to produce tangent images.
-These images are perspective images with the same camera centre as the ERP image, but their optical axis\MZY{principle axis} intersects the unit sphere at the tangent point with a circumscribed cube or icosahedron.
+These images are perspective images with the same camera centre as the ERP image, but their principle axis intersects the unit sphere at the tangent point with a circumscribed cube or icosahedron.
 %
 %% sampling points selection (Tangent/Center points selection.)
 %With different tangent point selection, the tangent images cover the different spherical surface area and image field of view (FOV).
@@ -132,8 +132,8 @@ To increase the FoV of tangent images and improve the continuity of optical flow
 
 \begin{figure}[hbt!]
 	\begin{center}
-		\subfigure[Gnomonic Projection]{\includegraphics[width=0.43\linewidth]{images/tangent_image/tangent_image_6.png}}
-		\subfigure[Target Image Padding]{\includegraphics[width=0.43\linewidth]{images/tangent_image/tangent_image.pdf}} 
+		\subfigure[Gnomonic Projection]{\includegraphics[width=0.57\linewidth]{images/tangent_image/tangent_image_7.pdf}}
+		\subfigure[Target Image Padding]{\includegraphics[width=0.35\linewidth]{images/tangent_image/tangent_image.pdf}} 
 	\end{center}
 	\caption{\label{fig:approach:projection}%
 %		Image cubemap and icosahedron projection with padding.
@@ -217,14 +217,13 @@ To rotate an ERP pixel, we first convert it to Cartesian 3D coordinates using $\
 %
 Applied to optical flow, this yields:
 %
-\CR{Should the `$- \mathbf{x}$' be outside the parenthesis?}
 \begin{equation}\label{equ:approach:globalwarp}
 %\begin{split}
 %	\mathcal{F}_{(i,j)} = \mathcal{F}^{EP}_{(i,j)} - (i,j)  
 %				= \mathcal{P}^{-1} \left( \hat{R}^{-1} \cdot \bar{R}^{-1} \cdot \mathcal{P}(\tilde{\mathcal{F}}^{EP}_{(i,j)}) - (i,j)\right)
 	\mathcal{F}(\mathbf{x})
 	= \mathcal{F}^\text{EP}(\mathbf{x}) - \mathbf{x}
-	= \mathcal{P}^{-1} \left( \hat{R}^\top \cdot \bar{R}^\top \cdot \mathcal{P}(\tilde{\mathcal{F}}^\text{EP}(\mathbf{x})) - \mathbf{x}\right)
+	= \mathcal{P}^{-1} \left( \hat{R}^\top \cdot \bar{R}^\top \cdot \mathcal{P}(\tilde{\mathcal{F}}^\text{EP}(\mathbf{x}))\right)  - \mathbf{x}
 	\text{.}
 %\end{split}
 \end{equation}
