--- a/doc/paper_draft/sections/3-approach.tex
+++ b/doc/paper_draft/sections/3-approach.tex
@@ -114,7 +114,7 @@ Our approach in principle supports any perspective optical flow method, and resu
 %
 %% tangent image generation
 Like \citet{ZhaoYZLBT2020}, we use the gnomonic projection to produce tangent images.
-These images are perspective images with the same camera centre as the ERP image, but their principle axis intersects the unit sphere at the tangent point with a circumscribed cube or icosahedron.
+These images are perspective images with the same camera centre as the ERP image, but their principal axis intersects the unit sphere at the tangent point with a circumscribed cube or icosahedron.
 %
 %% sampling points selection (Tangent/Center points selection.)
 %With different tangent point selection, the tangent images cover the different spherical surface area and image field of view (FOV).
